--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #181717;
   min-height: 100vh;
@@ -29,16 +18,19 @@
 }
 
 #title {
-  font-size: 3.5rem ;
-  color: red;
+  font-size: 4rem ;
+  color: #9e1f35;
   margin-top: .5rem;
-  margin-bottom: .3rem
+  margin-bottom: .3rem;
+  font-family: 'Jockey One', sans-serif;
 }
 
 #instuctions {
   color: white;
+  font-size: 2.6rem ;
   margin-top: .2rem;
-  margin-bottom: .3rem
+  margin-bottom: .3rem;
+  font-family: 'Jockey One', sans-serif;
 }
 
 #button_2 {
@@ -56,7 +48,7 @@
 
 .brewery_name {
   color: #a99924fa;
-  font-size: 2.3rem;
+  font-size: 3rem;
   font-weight: 600
 }
 
@@ -65,27 +57,28 @@
 }
 
 .brewery_address {
-  font-size: 1.6rem;
+  font-size: 2rem;
   line-height: 1.5rem;
   margin-top: .4rem;
   margin-bottom: .4rem
 }
 
 .brewery_type {
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   line-height: 1.5rem
 }
 
 .brewery_link {
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   line-height: 1.5rem;
   margin-top: 1rem
 }
 
 #details_name{
-  color: red;
+  color: #9e1f35;
   font-size: 2.5rem;
-  margin-top: .5rem
+  margin-top: .5rem;
+  font-family: 'Jockey One', sans-serif;
 }
 
 #details_address{
